# napari-czann-segment

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  env_napari_czann_segment.yml  pyproject.toml  setup.cfg  tox.ini
.github/: copilot-instructions.md
.github/_pr_descriptions/: pr_010_gpu_cpu_inference.md
.github/workflows/: test_and_deploy.yml  test_and_deploy_pypi.yml  test_and_deploy_testpypi.yml
src/napari_czann_segment/: __init__.py  _sample_data.py  _widget.py  dock_widget.py  extract_model.py  get_testdata.py  napari.yaml  napari.yaml.old  onnx_inference.py  predict.py  process_nd.py  tiling.py  utils.py
src/napari_czann_segment/_data/: 211122_AM_Al2O3_SE_023.ome.tiff  N2V_tobacco_leaf.czann  N2V_tobacco_leaf_Whitened.czann  simple_nuclei_segmodel.czann  simple_regmodel.czann  simple_regmodel_out5.czann
src/napari_czann_segment/_old/: extract_model.py  tiling.py
src/napari_czann_segment/_scripts/: demo_tiling.py  ndarray_prediction.py  ndarray_with_2d_tiling.py  test_extract_model.py  test_ndarray_prediction.py  test_ndarray_with_2d_tiling.py  test_tiling.py
src/napari_czann_segment/_tests/: test_czann_segment.py  test_dock_widget.py  test_extract_model.py  test_get_testdata.py  test_ndarray_prediction.py  test_ndarray_with_2d_tiling.py  test_onnx_inference.py  test_process_nd.py  test_sample_data.py  test_tiling.py  test_utils.py  test_widget.py.old
