[build-system]
requires = [
    "setuptools >= 45, < 81.0.0", 
    "wheel", 
    "setuptools_scm[toml] >= 6.2"
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/napari_czann_segment/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
