[metadata]
name = napari-czann-segment
description = Semantic Segmention using Deep Learning ONNX models packaged as *.czann files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebi06/napari-czann-segment
author = Sebastian Rhode
author_email = sebrhode@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/sebi06/napari-czann-segment/issues
    Documentation = https://github.com/sebi06/napari-czann-segment#README.md
    Source Code = https://github.com/sebi06/napari-czann-segment
    User Support = https://github.com/sebi06/napari-czann-segment/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    napari
    cztile
    czmodel
    onnxruntime
    aicsimageio

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src
exclude =
    _data*
    _scripts*

[options.entry_points]
napari.manifest =
    napari-czann-segment = napari_czann_segment:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml

[options.exclude_package_data]
* =
  *.ome.tiff
  *.czann
  *.tiff
  *.tif